Removed InputParser library, working GameState library, initial game logic, added authors to all files
 - Completely removed InputParser library (files and CMakeLists) as it's no longer necessary
 - Added GameState namespace with gameOver, round and global game logic function with utility functions
 - Modified main with basic Hello World! example of game logic
 - Added authors to all files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,4 @@
+# Authors: Lorenzo Colombo - Lorenzo De Filippo - Giovanni Nerviani
 cmake_minimum_required(VERSION 3.23)
 
 project(avventura
@@ -13,4 +14,4 @@ add_subdirectory(src)
 
 
 add_executable(avventura main.cpp)
-target_link_libraries(avventura PUBLIC InputParser GameState)
+target_link_libraries(avventura PUBLIC GameState)
