--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,12 +1,8 @@
+# Authors: Lorenzo Colombo - Lorenzo De Filippo - Giovanni Nerviani
 # set vairable HEADER_LIST to the path of all the headers
 file(GLOB HEADER_LIST CONFIGURE_DEPENDS "${avventura_SOURCE_DIR}/include/*.hpp")
 
-# create library InputParser composed of .ccp and headers in header list
-add_library(InputParser InputParser.cpp ${HEADER_LIST})
-
-target_include_directories(InputParser PUBLIC ../include)
-
-# create library GameState
+# create library GameState composed of .ccp and headers in header list
 add_library(GameState GameState.cpp ${HEADER_LIST})
 
 target_include_directories(GameState PUBLIC ../include)
