Added Functions library and base Function::startMenu
 - Added Functions header and source files
 - Added Functions in CMakeLists
 - Added barebone Functions::startMenu

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,4 +14,4 @@ add_subdirectory(src)
 
 
 add_executable(avventura main.cpp)
-target_link_libraries(avventura PUBLIC GameState)
+target_link_libraries(avventura PUBLIC GameState Functions)
