Modified Language header to better fit requirements

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,13 +4,15 @@ file(GLOB HEADER_LIST CONFIGURE_DEPENDS "${avventura_SOURCE_DIR}/include/*.hpp")
 
 # create library GameState composed of .ccp and headers in header list
 add_library(GameState GameState.cpp ${HEADER_LIST})
-
 target_include_directories(GameState PUBLIC ../include)
 
 
 add_library(Functions Functions.cpp ${HEADER_LIST})
-
 target_include_directories(Functions PUBLIC ../include)
+
+add_library(Languages Languages.cpp ${HEADER_LIST})
+target_include_directories(Languages PUBLIC ../include)
+
 
 source_group(
 	TREE "${PROJECT_SOURCE_DIR}/include"
